--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,11 @@
 <section>
 
-  <div class="container mt-5">
+  <div class="container mt-5 ml-0 pl-0">
     <div class="row">
 
       {{#each products}}
       <div class="col-md-3">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: 10em;">
           <img src="{{this.image}}" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">{{this.name}}</h5>
