--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,16 +4,16 @@
     <div class="row">
 
       {{#each products}}
-      <div class="col-md-3">
-        <div class="card" style="width: 10em;">
-          <img src="{{this.image}}" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">{{this.name}}</h5>
-            <p class="card-text">{{this.description}}</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="col-md-3">
+          <div class="card" style="width: 18rem;">
+            <img src="{{this.image}}" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">{{this.name}}</h5>
+              <p class="card-text">{{this.description}}</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
           </div>
         </div>
-      </div>
       {{/each}}
 
     </div>
